feat: 대회 조회 관련 기능에 캐싱 적용